--- a/Miguel Tavares/20240801_ecercicioHTML/index.html
+++ b/Miguel Tavares/20240801_ecercicioHTML/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Caixa de Perfil</title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-<div class="profile-box">
-  <img src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/434065722_1414691252513815_8595622364298968049_n.jpg?ccb=11-4&oh=01_Q5AaICSASPER9q3b7Ix8APB9jSfpjx0nHH-uIop5RajUxd0q&oe=66B91B83&_nc_sid=e6ed6c&_nc_cat=101" alt="Imagem de Perfil" class="profile-image">
-  <h1 class="profile-name">Miguel Tavares 😊</h1>
-  <p class="profile-date">01/08/2024</p>
-</div>
-
+    <section class="container">
+        <div class="image-infos"><img
+                src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/434065722_1414691252513815_8595622364298968049_n.jpg?ccb=11-4&oh=01_Q5AaIB6GJ2CEyEq2KuVFmZAzXK4D788Zb5BhrDdNL6HYJIwS&oe=66B953C3&_nc_sid=e6ed6c&_nc_cat=101">
+            <div class="infos">
+                <div class="name">Miguel Tavares</div>
+                <div class="message">01/08/2024</div>
+            </div>
+        </div>
+        <div class="icons">
+            <div class="link">😭</div>
+        </div>
+    </section>
 </body>
 </html>
