--- a/Caio Cidral Ramos/20240801_exercicio/index.html
+++ b/Caio Cidral Ramos/20240801_exercicio/index.html
@@ -20,9 +20,7 @@
                     <div class="date">01/08/2024</div>
                 </div>
             </div>
-            <div class="cb-right">
-                😀
-            </div>
+            <div class="cb-right">😀</div>
         </div>
         <div class="obs">
             <strong>Observações do box:</strong><br>
