--- a/João Guilherme Bogo Cristovão/20240801_exercicioHTML/index.html
+++ b/João Guilherme Bogo Cristovão/20240801_exercicioHTML/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="mc">
+        <div class="mc-one">
             <header>
                 <div class="image-infos">
                     <img
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="icons">
-                    <div class="link">😀</div>
+                    <div class="icon">😀</div>
     </div>
 </body>
 </html>
