--- a/Guilherme Cabral/2024801_exercicioHTML/index.html
+++ b/Guilherme Cabral/2024801_exercicioHTML/index.html
@@ -4,26 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Document</title>
 </head>
-<body>
+
+<body> 
 
     <div class="main-container">
-        <div class="mc-left">
-            <header>
-                <img src="https://pm1.aminoapps.com/7257/d25f22b359c2005feb75b9a596711f29d426d10dr1-588-522v2_00.jpg">
-                <div class="icons">
-                        <div class="image-infos">
-                            <div class="infos">
-                                <div class="nome">Nome do Usuario</div>
-                            </div>
-                        </div>
-                        <div class="date">01/08/2024</div>
-                    </div>
-                    <footer>
-                        <div class="icon">😊</div>
-                    </footer>
-    
+            <header> 
+                <img 
+                    src="https://pm1.aminoapps.com/7257/d25f22b359c2005feb75b9a596711f29d426d10dr1-588-522v2_00.jpg">
+                <div class="info">
+                    <div class="name">Nome do usario</div>
+                    <div class="date">05/08/2024</div>
+                </div>  
+                <div class="icons">😀</div>
+            </header>
+    </div>
+
 </body>
-<html>
+
+</html>
