--- a/Henrique de Freitas/20240801_ExercicioHTML/Atividade.HTML
+++ b/Henrique de Freitas/20240801_ExercicioHTML/Atividade.HTML
@@ -10,15 +10,16 @@
 </head>
 
 <div class="Main-container">
-    <div class="Mc-left">
-        <header>
-            <div class="Image-Infos">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROZ2ZV8f_IBk865E7bEObKgFmfnBsorNTXcA&s">
-                <div class="Name">Nome do Usuario</div>
-                <div class="Data">01/08/2024</div>
-                <div class="emoji">😊</div>
-            </div>
-    </div>
+    <header>
+        <img src="https://s2-g1.glbimg.com/JT8chfKV4tIM9qzZzyl8sfNjItw=/0x0:984x738/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2022/W/r/lteJWCQECJ4WAUOVzCzQ/bbb22-lucas-e-participante-do-grupo-pipoca-credito-juliana-hippert.jpg">
+        <div class="Info">
+            <div class="Name">Nome do Usuario</div>
+            <div class="Data">01/08/2024</div>
+        </div>
 
+        <div class="emoji">😊</div>
+    </header>
 </div>
+</body>
 
+</html>
