--- a/Willian_Cavalcante/20240801_execiciohtml/index.html
+++ b/Willian_Cavalcante/20240801_execiciohtml/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stayle.css">
 </head>
 
 <body>
     <div class="main">
         <div class="user">
-            <img
-                src="https://upload.wikimedia.org/wikipedia/commons/5/55/Bufotes_balearicus_female.jpg">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/Bufotes_balearicus_female.jpg">
             <div class="infos">
                 <div class="nome">Willian Cavalcante</div>
                 <div class="date">01/08/2024</div>
