--- a/Pedro Zimermann/20240806_admin-template/index.html
+++ b/Pedro Zimermann/20240806_admin-template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="assets/vendors/fontawesome-free-6.6.0-web/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
+
 <body>
     <div class="main-container">
         <header class="mc-top">
-            <div class="header-logo"><img src="assets/images/logo-white.png" alt="Minha logo">
+            <div class="header-logo">
+                <img src="assets/images/logo-white.png" >
             </div>
             <div class="header-content">
                 <div class="hc-search">
@@ -21,11 +24,12 @@
                     </div>
                 </div>
                 <div class="hc-options">
+
                 </div>
-            </div>
         </header>
+
         <div class="mc-bottom">
+
         </div>
     </div>
 </body>
-</html>
