admin_template-sla

--- a/Daniel Silva Rangel Mota/20240806_admin-template/index.html
+++ b/Daniel Silva Rangel Mota/20240806_admin-template/index.html
@@ -17,15 +17,16 @@
             </div>
             <div class="header-content">
                 <div class="hc-search">
-                    
+
                     <div class="search-container">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text"></div>
-                        
-                <div class="hc-options">
+                        <input type="text">
+                    </div>
 
+                    <div class="hc-options">
+
+                    </div>
                 </div>
-            </div>
 
         </header>
         <div class="mc-bottom">
