--- a/Daniel Nunes Anzini/20240801_exercicioHTML/index.html
+++ b/Daniel Nunes Anzini/20240801_exercicioHTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-    <div class="main-container">
-        <div class="mc-left">
-            <header>
-                <img
-                    src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/434065722_1414691252513815_8595622364298968049_n.jpg?ccb=11-4&oh=01_Q5AaICSASPER9q3b7Ix8APB9jSfpjx0nHH-uIop5RajUxd0q&oe=66B91B83&_nc_sid=e6ed6c&_nc_cat=101">
-                <div class="icons">
-                    <div class="messege">😁</div>
-                    <div class="menu">⁝</div>
-                </div>
-            </header>
-            <section class="search">
-                <div class="lupa">🔍</div>
-                <input type="text" placeholder="Nome do Usuário">
-            </section>
+    <section class="container">
+        <div class="image-infos"><img
+                src="https://media-gru2-2.cdn.whatsapp.net/v/t61.24694-24/434065722_1414691252513815_8595622364298968049_n.jpg?ccb=11-4&oh=01_Q5AaIB6GJ2CEyEq2KuVFmZAzXK4D788Zb5BhrDdNL6HYJIwS&oe=66B953C3&_nc_sid=e6ed6c&_nc_cat=101">
+            <div class="infos">
+                <div class="name">Daniel Anzini</div>
+                <div class="message">01/08/2024</div>
+            </div>
+        </div>
+        <div class="icons">
+            <div class="link">😭</div>
+        </div>
+    </section>
+</body>
+</html>
