--- a/Nicolas Goncalves Sombrio/20240706_admin-template/index.html
+++ b/Nicolas Goncalves Sombrio/20240706_admin-template/index.html
@@ -23,19 +23,16 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <input type="text">
                     </div>
-                    
                 </div>
 
                 <div class="hc-options">
-
+                    <div class="option-item"><i class="fa-regular fa-bell"></i></div>
+                    <div class="option-item"><i class="fa-solid fa-globe"></i></div>
+                    <div class="option-item"><i class="fa-solid fa-gear"></i></div>
+                    <div class="option-item menu"></div>
                 </div>
             </div>
         </header>
-        <div class="mc-bottom">
-
-        </div>
-    </div>
-
 
 </body>
 
