--- a/Guilherme Boeira Damasio/20240806_admin-template/index.html
+++ b/Guilherme Boeira Damasio/20240806_admin-template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<meta charset="UTF-8">
@@ -7,6 +7,9 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="assets/vendors/fontawesome-free-6.6.0-web/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -64,7 +67,23 @@
 			</nav>
 			<section class="main-content">
 				<div class="main-content-inside">
-					alskdj
+					<div class="initial-container-top">
+						<div class="ict-left">
+							<div class="ict-line-container">
+								<div class="container-box">
+									<div class="cb-title">Titulo</div>
+									<div class="lc-cb-infos">
+										<div class="value-big">R$2.500</div>
+										<div class="value-small">11.4%</div>
+									</div>
+									<div class="cb-text">Texto</div>
+								</div>
+							</div>
+						</div>
+						<div class="ict-right">
+							ddd
+						</div>
+					</div>
 				</div>
 			</section>
 		</div>
