--- a/Caio Cidral Ramos/20240806_admin-template/index.html
+++ b/Caio Cidral Ramos/20240806_admin-template/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Document</title>	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/vendors/fontawesome-free-6.6.0-web/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -64,7 +67,27 @@
 			</nav>
 			<section class="main-content">
 				<div class="main-content-inside">
-					alskdj
+					
+					<div class="initial-container-top">
+						<div class="ict-left">
+
+							<div class="ict-line-container">
+								<div class="container-box">
+									<div class="cb-title">Titulo</div>
+									<div class="lc-cb-infos">
+										<div class="value-big">R$2500</div>
+										<div class="value-small">-11.4%</div>
+									</div>
+									<div class="cb-text">Texto</div>
+								</div>
+							</div>
+
+						</div>
+						<div class="ict-right">
+							123
+						</div>
+					</div>
+
 				</div>
 			</section>
 		</div>
