--- a/Jose Jorge Abreu Silva Junior/20240806_admin-template/index.html
+++ b/Jose Jorge Abreu Silva Junior/20240806_admin-template/index.html
@@ -76,7 +76,7 @@
 								<div class="container-box">
 
 									<div class="cb-title">
-										O maior do brasil
+										O maior do Brasil
 									</div>
 									<div class="ic-cb-infos">
 										<div class="value-big">
