--- a/Andre Carlos Candido da Silva/20240725_htmlcss-whatsapp/index.html
+++ b/Andre Carlos Candido da Silva/20240725_htmlcss-whatsapp/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-
+    <link rel="stylesheet" type="text/css" href="fontawesome-free-6.6.0-web/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    
 
 </head>
 
@@ -20,12 +20,18 @@
             <header>
                 <img src="https://tm.ibxk.com.br/2017/08/04/04201638403571.jpg">
                 <div class="icons">
-                    <div class="message">✉</div>
-                    <div class="menu">⁝</div>
+                    <div class="message">
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div class="menu">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
             </header>
             <section class="search">
-                <div class="lupa">🔍</div>
+                <div class="lupa">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
                 <input type="text" placeholder="Ache seus contatos">
             </section>
 
@@ -69,8 +75,13 @@
                     </div>
                 </div>
                 <div class="icons">
-                    <div class="link">🔗</div>
-                    <div class="menu">⁝</div>
+                    <div class="link">
+                        <i class="fa-solid fa-paperclip"></i>
+                    </div>
+                    <div class="menu">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+
+                    </div>
                 </div>
             </header>
 
@@ -88,14 +99,21 @@
             </section>
             <footer>
 
-                <div class="icon">☺</div>
+                <div class="icon">
+                    <i class="fa-regular fa-face-laugh"></i>
+                </div>
                     <input type="text">
-                    <div class="icon">🎙</div>
+                    <div class="icon">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
                 
             </footer>
         </div>
     </div>
-    <script src="index.js"></script>
+
+    <script src="jquery-3.7.1.js"></script>
+    <script src="sprit.js"></script>
+
 </body>
 
 </html>
