--- a/Lucas Abreu Leite Nepomuceno/20240725_htmlcss-whatsapp/index.html
+++ b/Lucas Abreu Leite Nepomuceno/20240725_htmlcss-whatsapp/index.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="fontawesome-free-6.6.0-web/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 
 <body>
@@ -16,12 +18,12 @@
                 <img
                     src="https://img.freepik.com/vetores-premium/ilustracao-de-avatar-de-estudante-icone-de-perfil-de-usuario-avatar-de-jovem_118339-4402.jpg">
                 <div class="icons">
-                    <div class="message">✉</div>
-                    <div class="menu">⁝</div>
+                    <div class="message"><i class="fa-regular fa-envelope"></i></div>
+                    <div class="menu"><i class="fa-solid fa-ellipsis-vertical"></i></div>
                 </div>
             </header>
             <section class="search">
-                <div class="lupa">🔍</div>
+                <div class="lupa"><i class="fa-solid fa-magnifying-glass"></i></div>
                 <input type="text" placeholder="Ache seus contatos">
 
             </section>
@@ -61,8 +63,8 @@
                     </div>
                 </div>
                 <div class="icons">
-                    <div class="link">🔗</div>
-                    <div class="menu">⁝</div>
+                    <div class="link"><i class="fa-solid fa-paperclip"></i></div>
+                    <div class="menu"><i class="fa-solid fa-ellipsis-vertical"></i></div>
                 </div>
             </header>
             <section class="messages-container">
@@ -73,7 +75,7 @@
                     <span data-time="22:07">
                         Ninguem sabe o dia de amanha
                     </span>
-                </div>
+                </div>  
                 <div class="message message-right">
                     <span data-time="22:07">
                         amanha é dia de Palmeiras
@@ -82,13 +84,15 @@
                 </div>
             </section>
             <footer>
-                <div class="icon">☺️</div>
+                <div class="icon"><i class="fa-regular fa-face-smile"></i></div>
                 <input type="text">
-                <div class="icon">🎙️ </div>
+                <div class="icon"><i class="icon-action-send fa-solid fa-microphone"></i> </div>
             </footer>
         </div>
     </div>
 
+    <script src="jquery-3.7.1.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
