--- a/Jose Jorge Abreu Silva Junior/20240806_admin-template/index.html
+++ b/Jose Jorge Abreu Silva Junior/20240806_admin-template/index.html
@@ -6,8 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/vendors/fontawesome-free-6.6.0-web/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -42,7 +44,7 @@
 								style="background-image: url(https://emilus.themenate.net/img/avatars/thumb-1.jpg);">
 							</div>
 							<div class="infos-ct">
-								<div class="name">Caio Cidral Ramos</div>
+								<div class="name">Nicolas Gonçalves Sombrio</div>
 								<div class="info">Desenvolvedor Full-Stack</div>
 							</div>
 						</div>
@@ -66,6 +68,7 @@
 				</div>
 			</nav>
 			<section class="main-content">
+
 				<div class="main-content-inside">
 
 					<div class="initial-container-top">
@@ -73,30 +76,29 @@
 						<div class="ict-left">
 
 							<div class="ict-line-container">
+
 								<div class="container-box">
 
-									<div class="cb-title">
-										O maior do Brasil
+									<div class="cb-title">Titulo</div>
+
+									<div class="lc-cb-infos">
+
+										<div class="value-big">R$2500</div>
+										<div class="value-small">-11.4%</div>
 									</div>
-									<div class="ic-cb-infos">
-										<div class="value-big">
-											SANTOS
-										</div>
-										<div class="value-small">
-											+14.4%
-										</div>
-									</div>
-									<div class="cb-text">
-										Campeão da Libertadores e mundial
-									</div>
+
+									<div class="cb-text">Texto</div>
 
 								</div>
 							</div>
-						</div>
 
+						</div>
 						<div class="ict-right">
+							123
 						</div>
 					</div>
+
+				</div>
 			</section>
 		</div>
 	</div>
